# INRIA_essentials

Archive/: gbs.py  octave-core  out_test.txt  srfiles.py
Depth_Image_Creator_Freiburg_People/: Convert_image_people_dataset.m  edgeDetection.m
EPFL_extractor/: extract_img.py
Ground_Truth_Annotations/: annot_test.py  annotate_image.py  annotations.txt
Load_Dataset/: loadData.py  runCode
Negative_Image_generator/: neg_image.py
Visualize_HOG/: plot_hog.py
cad60/: untitled.py
chalearn/: chalearn_gtruth.py  check_gtruth.py  getframes.py  plot_skeleton.py  readframes.py  test.ipynb  test.py
convert2tiff/: CMakeLists.txt  main.cpp
end2end_detection/: alexnet_convnet_depth.py  alexnet_depth.py  alexnet_people_depth.py  calc_pre_rec.py  create_video.py  deleteRepeAT.py  getNegatives.py  hog_rf_train.py  people_detect_upd.py  run_on_gt.py  scaled_people_depth.py  simple_people_depth.py  test.py  testCAD.py  testDataset.py  testLarsen.py  testNewModel.py  testSUP.py  testSimpleCAD.py  testSimpleLarsen.py  test_people.py  view_data.py
ktp/: loadData.py
rccnn_ground_truth/: generate_gt.py
rcnn_plot_detection/: plot_detection.py  test.py
ssd/: CMakeLists.txt  main.cpp  people_detector.cpp  people_detector.h
